--- a/PortalHelpdeskTI/Views/Home/Index.cshtml
+++ b/PortalHelpdeskTI/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Chamado>
+﻿@using PortalHelpdeskTI.Models
+@model IEnumerable<Chamado>
 
 @{
     ViewData["Title"] = "Página Inicial";
