--- a/PortalHelpdeskTI/Views/Shared/_Layout.cshtml
+++ b/PortalHelpdeskTI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Portal Helpdesk TI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/tecnico-painel.css" /> <!-- Sempre por último -->
+    <link rel="stylesheet" href="~/css/tecnico-painel.css" />
     <style>
         .navbar-custom {
             background-color: #004A80;
@@ -103,5 +103,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
